--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "mf"
+name: mf
 output_dir: ../docs
 navbar:
-  title: "mf"
+  title: mf
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/joonsukkang/mf
 output:
   workflowr::wflow_html:
     toc: yes
